# rules_fortran

./: .bazelrc  .fprettify.cfg  .gitignore  404.html  MODULE.bazel  README.md  WORKSPACE.bazel  index.html  print.html  rules.html  searchindex.js  searchindex.json
.github/: release_notes.template
.github/workflows/: ci.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: index.md
fortran/: BUILD.bazel  defs.bzl  extensions.bzl  fortran_binary.bzl  fortran_library.bzl  fortran_shared_library.bzl  fortran_test.bzl  fortran_toolchain.bzl
fortran/compiler/: BUILD.bazel
fortran/private/: BUILD.bazel  common.bzl  compiler_config.bzl  compiler_flag.bzl  fortran.bzl  local_config.bzl  providers.bzl  toolchain.bzl
fortran/private/tests/bin_with_deps/: BUILD.bazel  main.f90
fortran/private/tests/bin_with_shared/: BUILD.bazel  main.f90
fortran/private/tests/binary/: BUILD.bazel  main.f90
fortran/private/tests/cc/: BUILD.bazel  cc_lib.cc  cc_lib.h  cc_wrapper.cc  cc_wrapper_test.cc  fortran_lib.f90  fortran_test_cc.f90  fortran_using_cc.f90
fortran/private/tests/lib_with_deps/: BUILD.bazel  string_utils.f90
fortran/private/tests/module_deps/: BUILD.bazel  constants.f90  geometry.f90  main.f90
fortran/private/tests/shared_library/: BUILD.bazel  greeting.f90
fortran/private/tests/test/: BUILD.bazel  test_main.f90
fortran/private/tests/test_with_deps/: BUILD.bazel  test_main.f90
fortran/private/tests/transitive_mods/: BUILD.bazel  main.f90  operations.f90  types.f90
fortran/runfiles/: BUILD.bazel  runfiles.c  runfiles.f90  runfiles.h
fortran/runfiles/tests/: BUILD.bazel  runfiles_test.f90  test_data.txt
tools/coverage_checker/: coverage_checker.py
