"""rules_fortran"""

module(
    name = "rules_fortran",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.4")

bazel_dep(name = "rules_rust_mdbook", version = "0.69.0", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True)

fortran_configure = use_extension("//fortran:extensions.bzl", "fortran_configure_extension")
use_repo(fortran_configure, "local_config_fortran", "local_config_fortran_toolchains")

register_toolchains(
    "@local_config_fortran_toolchains//:all",
)
