load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = [
        "//fortran:__pkg__",
        "//fortran/compiler:__pkg__",
    ],
    deps = [
        "@bazel_skylib//lib:paths",
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)
